2007-09-09  Cosimo Cecchi  <cosimoc@svn.gnome.org>

	* lib/widgets/ephy-zoom-action.c: (connect_proxy):

	Fixes bad state syncing when adding zoom controls to the toolbar.
	Fixes bug #338005. Patch by Cyril Brulebois.

2007-09-09  Cosimo Cecchi  <cosimoc@svn.gnome.org> 

	* src/ephy-find-toolbar.c: (set_status_notfound_cb), (set_status),
	(ephy_find_toolbar_dispose):

	Make 'Not found' on find toolbar temporairly bold and fires
	gtk_widget_error_bell () when searching on a page and no results are
	found. Fixes bug #363004.

2007-09-08  Cosimo Cecchi  <cosimoc@svn.gnome.org>

	* embed/downloader-view.c: (downloader_view_finalize),
	(update_buttons_timeout_cb), (downloader_view_add_download):

	Fix runtime warnings when downloading small files, due to bad handling
	of g_timeout in DownloaderView. Fixes bug #473566.

2007-08-28  Christian Persch  <chpe@gnome.org>

	* data/mime-types-permissions.xml:

	More mime types.

2007-08-26  Diego Escalante Urrelo  <diegoe@gnome.org>

	* src/ephy-go-action.c:

	Fix the Go button signal handler so it doesn't stop the propagation of
	the event due to a bad signal handler. Fixes bug #469845. Patch by
	Cosimo Cecchi.

2007-08-26  Diego Escalante Urrelo  <diegoe@gnome.org>

	* lib/ephy-file-helpers.c:
	* lib/ephy-file-helpers.h:
	* embed/mozilla/MozDownload.h:
	* embed/mozilla/MozDownload.cpp:

	Add saved files to the GtkRecent list, gnome-panel is broken so don't
	expect to see the effects of this working there, you can use it on the
	GtkFileChooser dialog however. Fixes Bug #148401. Original patch by
	Christian Persch, updated by Cosimo Cecchi.

2007-08-25  Christian Persch  <chpe@gnome.org>

	* data/mime-types-permissions.xml:

	More mime types.

2007-08-22  Christian Persch  <chpe@gnome.org>

	* embed/mozilla/GeckoPrintService.cpp:

	Enable printing to PDF file on gecko 1.9, now that moz#367907 is
	fixed.

2007-08-19  Diego Escalante Urrelo  <diegoe@gnome.org>

	* lib/widgets/ephy-location-entry.c:
