@@ -1,5 +1,13 @@
 2007-09-09  Cosimo Cecchi  <cosimoc@svn.gnome.org>
 
+	* src/ephy-toolbar-editor.c: (ephy_toolbar_editor_constructor):
+
+	Marks as translatable some toolbar editor strings and removes
+	references to old Control Center gettext domain. Fixes bug #474429.
+	Patch by Cyril Brulebois.
+
+2007-09-09  Cosimo Cecchi  <cosimoc@svn.gnome.org>
+
 	* lib/widgets/ephy-zoom-action.c: (connect_proxy):
 
 	Fixes bad state syncing when adding zoom controls to the toolbar.
